[package]
name = "backup_tool"
version = "0.1.0"
edition = "2021"
description = "Утилита резервного копирования с шифрованием и логированием"

[dependencies]
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
aes-gcm = "0.10.3"
rand = "0.8.5"
hkdf = "0.12.4"
sha2 = "0.10.8"
tar = "0.4.40"
flate2 = "1.0.28"
walkdir = "2.4.0"
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
bincode = "1.3.3"
clap = { version = "4.4.11", features = ["derive"] }
chrono = "0.4.31"

[[bin]]
name = "gen_keypair"
path = "src/gen_keypair.rs"
